--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -8,14 +8,14 @@
 <body>
   <header>
     <ul>
-      <li><a href="index.html">Go back to homepage</a></li>
+      <li><a href="index.html">homepage</a></li>
+      <li><a href="tweets.html">tweets</a></li>
     </ul>
   </header>
   <main>
     <article>
       <h1>My Tweets</h1>
 
-      <!-- Exemple d'un tweet intégré -->
       <blockquote class="twitter-tweet">
         <p lang="en" dir="ltr">
           Just setting up my twttr
@@ -26,9 +26,12 @@
       <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
     </article>
+    <aside>
+      <p>placeholder to add comment thread later</p>
+    </aside>
   </main>
   <footer>
-    <p>Made by farai</p>
+    <p>Made by farai - <a href="mailto:example@gmail.com" target="_blank">here</a></p>
   </footer>
 </body>
 </html>
