--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -38,7 +38,7 @@
     </aside>
   </main>
   <footer>
-    <p>Made by farai - <a href="mailto:example@gmail.com" target="_blank">here</a></p>
+    <p>Made by Salim Abdessamad - <a href="mailto:example@gmail.com" target="_blank">here</a></p>
   </footer>
 </body>
 </html>
