--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -1,44 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>My Personal Page</title>
-</head>
-<body>
-  <header>
-    <ul>
-      <li><a href="index.html">homepage</a></li>
-      <li><a href="tweets.html">tweets</a></li>
-    </ul>
-  </header>
-  <main>
-    <article>
-      <h1>Welcome to My Website</h1>
-      <p>This is the first paragraph, introducing the site.</p>
-
-      <h2>About Me</h2>
-      <p>I am passionate about web development and UI/UX design.</p>
-
-      <h3>My Skills</h3>
-      <p>I work with HTML, CSS, JavaScript, and frameworks like React.</p>
-
-      <p>I enjoy creating user-friendly and accessible websites.</p>
-
-      <a href="https://www.alxafrica.com" target="_blank" rel="noopener noreferrer">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>title</title>
+  </head>
+  <body>
+    <header>
+      <ul>
+        <li><a href="index.html">homepage</a></li>
+      </ul>
+    </header>
+    <main>
+      <article>
+        <p>i love the hours</p>
+        <p>i can work from home</p>
+        <p>i get to try other things</p>
+        <p>eat hot cooked food</p>
         <img
           src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png"
-          alt="ALX Logo"
-          style="width:200px;"
+          alt="image i like"
         />
-      </a>
-    </article>
-    <aside>
-      <p>placeholder to add comment thread later</p>
-    </aside>
-  </main>
-  <footer>
-    <p>Made by Salim Abdessamad - <a href="mailto:example@gmail.com" target="_blank">here</a></p>
-  </footer>
-</body>
+        <a href="google.com">i also like this image</a>
+        <table>
+          <thead>
+            <tr>
+              <th>Name</th>
+              <th>Age</th>
+              <th>Country</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>John</td>
+              <td>25</td>
+              <td>USA</td>
+            </tr>
+            <tr>
+              <td>Emily</td>
+              <td>28</td>
+              <td>Canada</td>
+            </tr>
+            <tr>
+              <td>Michael</td>
+              <td>32</td>
+              <td>Australia</td>
+            </tr>
+            <tr>
+              <td>Sophia</td>
+              <td>21</td>
+              <td>UK</td>
+            </tr>
+          </tbody>
+        </table>
+      </article>
+      <aside>
+        <p>placeholder to add comment thread later</p>
+      </aside>
+    </main>
+    <footer>
+      <p>Made by Salim Abdessamad - <a href="gmail.com" target="_blank">here</a></p>
+    </footer>
+  </body>
 </html>
