--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -1,37 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Tweets Page</title>
-</head>
-<body>
-  <header>
-    <ul>
-      <li><a href="index.html">homepage</a></li>
-      <li><a href="tweets.html">tweets</a></li>
-    </ul>
-  </header>
-  <main>
-    <article>
-      <h1>My Tweets</h1>
-
-      <blockquote class="twitter-tweet">
-        <p lang="en" dir="ltr">
-          Just setting up my twttr
-        </p>
-        &mdash; Jack (@jack)
-        <a href="https://twitter.com/jack/status/20">March 21, 2006</a>
-      </blockquote>
-      <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-
-    </article>
-    <aside>
-      <p>placeholder to add comment thread later</p>
-    </aside>
-  </main>
-  <footer>
-    <p>Made by Salim Abdessamad - <a href="mailto:example@gmail.com" target="_blank">here</a></p>
-  </footer>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>title</title>
+  </head>
+  <body>
+    <header>
+      <ul>
+        <li><a href="index.html">homepage</a></li>
+      </ul>
+    </header>
+    <main>
+      <article>
+        <h1>farai</h1>
+        <h2>my job</h2>
+        <h3>what i love about it</h3>
+        <p>i love the hours</p>
+        <p>i can work from home</p>
+        <p>i get to try other things</p>
+        <p>eat hot cooked food</p>
+        <img
+          src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png"
+          alt="image i like"
+        />
+        <a href="google.com">i also like this image</a>
+        <blockquote class="twitter-tweet">
+          <p lang="en" dir="ltr">Example tweet text here.</p>
+          &mdash; Twitter User (@username)
+          <a href="https://twitter.com/username/status/123456789"
+            >Month Day, Year</a
+          >
+        </blockquote>
+        <script
+          async
+          src="https://platform.twitter.com/widgets.js"
+          charset="utf-8"
+        ></script>
+        <a href="index.html">homepage</a>
+        <blockquote class="twitter-tweet">
+          <p lang="en" dir="ltr">Example tweet text here.</p>
+          &mdash; Twitter User (@username)
+          <a href="https://twitter.com/username/status/12345789"
+            >Month Day, Year</a
+          >
+        </blockquote>
+        <script
+          async
+          src="https://platform.twitter.com/widgets.js"
+          charset="utf-8"
+        ></script>
+        <table>
+          <thead>
+            Name
+          </thead>
+          <thead>
+            Age
+          </thead>
+          <thead>
+            Country
+          </thead>
+        </table>
+      </article>
+      <aside>
+        <p>placeholder to add comment thread later</p>
+      </aside>
+    </main>
+    <footer>
+      <p>Made by Salim Abdessamad - <a href="gmail.com" target="_blank">here</a></p>
+    </footer>
+  </body>
 </html>
